--- a/formulario_calculo_ferias.html
+++ b/formulario_calculo_ferias.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <title>Solicitações de Aviso Prévio de Férias</title>
 </head>
 <body>
     <div class="center">
-        <h5>Solicitação Aviso Prévio de Férias</h5>
+        <h5>Solicitação Cálculo de Férias</h5>
     </div>
     <div class="main-form"> <!-- Início do div main-form -->
         <form action="formulario.php" method="post" class="card-login">
@@ -51,23 +51,25 @@
                     <input type="text" name="Dias de gozo" id="Dias de gozo" required>
                 </div>
                 <div class="textfield">
-                    <label for="Dias de abono opcional">6. Dias de abono - opcional:</label>
-                    <input type="text" name="Dias de abono opcional" id="Dias de abono opcional">
+                    <label for="Pagar abono pecuniário">6. Pagar abono pecuniário:</label>
+                    <input type="radio" name="Pagarabono" id="Sim" value="Sim">
+                    <label for="Sim">Sim</label>
+                    <input type="radio" name="Pagarabono" id="Nao" value="Nao">
+                    <label for="Sim">Nao</label>
                 </div>
                 <div class="textfield">
-                    <label for="Data do aviso opcional">7. Data do aviso opcional:</label>
-                    <input type="date" name="Data do aviso opcional" id="Data do aviso opcional">
+                    <label for="Data do aviso opcional">7. Adiantar 1ª parcela do 13º:</label>
+                    <input type="radio" name="Adiantardecimo" id="Sim" value="Sim">
+                    <label for="Sim">Sim</label>
+                    <input type="radio" name="Pagarabono" id="Nao" value="Nao">
+                    <label for="Sim">Nao</label>
                 </div>
                 <div class="textfield">
-                    <label for="Data do pagamento opcional">8. Data do pagamento opcional:</label>
-                    <input type="date" name="Data do pagamento opcional" id="Data do pagamento opcional">
-                </div>
-                <div class="textfield">
-                    <label for="Assunto">9. Assunto:</label>
+                    <label for="Assunto">8. Assunto:</label>
                     <input type="text" name="Assunto" id="Assunto" required>
                 </div>
                 <div class="textfield">
-                    <label for="mensagem">10. Descrição:</label>
+                    <label for="mensagem">9. Descrição:</label>
                     <textarea name="mensagem" id="mensagem" cols="50" rows="10" required></textarea>
                 </div>
                 <div class="textfield">
@@ -75,7 +77,7 @@
                     <input type="date" name="Expectativa de Conclusão  opcional" id="Expectativa de Conclusão  opcional" required>
                 </div>
                 <div class="textfield">
-                    <label for="Anexar Documento">12. Anexar Documento:</label>
+                    <label for="Anexar Documento">10. Anexar Documento:</label>
                     <input type="file" name="Anexar Documento" id="Anexar Documento" accept=".pdf, .xls, .xlsx" required>
                     <small>Tipos de arquivos aceitos: PDF, Excel (.xls, .xlsx).</small>
                 </div>
