Subi a sessao pagina HOME para selecionar o tipo de solicitacao

--- a/formulario_aviso_previo_ferias.html
+++ b/formulario_aviso_previo_ferias.html
@@ -28,7 +28,7 @@
                 <div class="textfield">
                     <label for="Email Gestor">2. Email Gestor:</label>
                     <select name="email" id="Email Gestor" required>
-                        <option value="" disabled selected>Selecione o email gestor</option>
+                        <option value="" disabled selected></option>
                         <option value="felipe.alexandrino@treo.com.br">felipe.alexandrino@treo.com.br</option>
                         <option value="renan.medeiros@treo.com.br">renan.medeiros@treo.com.br</option>
                         <option value="sistemas@treo.com.br">sistemas@treo.com.br</option>
@@ -37,7 +37,7 @@
                 <div class="textfield">
                     <label for="Empregado">3. Empregado:</label>
                     <select name="Empregado" id="Empregado" required>
-                        <option value="" disabled selected>Selecione um empregado</option>
+                        <option value="" disabled selected></option>
                         <option value="FELIPE ALEXANDRINO">FELIPE ALEXANDRINO</option>
                         <option value="RENAN MEDEIROS">RENAN MEDEIROS</option>
                     </select>
