Subi nova Sheet Acompanhamento

--- a/formulario_aviso_previo_ferias.html
+++ b/formulario_aviso_previo_ferias.html
@@ -8,6 +8,18 @@
     <title>Solicitações de Aviso Prévio de Férias</title>
 </head>
 <body>
+    <header>
+            <img src="Logo_Treo_Moletom.png" alt="Logo da Empresa" class="header-logo">
+        <!-- Barra de navegação -->
+        <nav
+            <ul = class="navbar">
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#acompanhamentos" class="nav-link">Aprovals</a></li>
+                <li><a href="#contatos" class="nav-link">Contacts</a></li>
+            </ul>
+        </nav>
+    
+        
     <div class="center">
         <h5>Solicitação Aviso Prévio de Férias</h5>
     </div>
