Formatação Layout e detalhes Formulario de aviso Ferias

--- a/formulario_aviso_previo_ferias.html
+++ b/formulario_aviso_previo_ferias.html
@@ -26,15 +26,17 @@
 </head>
 <body>
     <header>
-        <img src="Logo_Treo_Moletom.png" alt="Logo da Empresa" class="header-logo">
+        <div class="header-content"> <!-- Envolve o logo e a navegação -->
+            <img src="Logo_Treo_Moletom.png" alt="Logo da Empresa" class="header-logo">
         <!-- Barra de navegação -->
-        <nav
-            <ul = class="navbar">
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#acompanhamentos" class="nav-link">Aprovals</a></li>
-                <li><a href="#contatos" class="nav-link">Contacts</a></li>
-            </ul>
-        </nav>      
+            <nav
+                <ul = class="navbar">
+                    <li><a href="#home" class="nav-link">Home</a></li>
+                    <li><a href="#Workflow" class="nav-link">Workflow</a></li>
+                </ul>
+            </nav> 
+        </div>  
+    </header>   
     <div class="center">
         <h5>Solicitação Aviso Prévio de Férias</h5>
     </div>
@@ -104,13 +106,11 @@
                 <div class="textfield">
                     <button type="submit" name="submit-form" class="submit">Enviar Formulário</button>  
                 </div>
-                <div class="direitos">
-                    <p>© 2024 Treo Tecnologia. Todos os direitos reservados.</p>
+
         </form>
     </div> <!-- Fim do div main-form -->
     <footer>
         <div class="footer-content">
-            <img src="Logo_Treo_Moletom.png" alt="Logo da Empresa" class="footer-logo">
         </div>
     </footer>
 </body>        
